--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sunny's Portfolio</title>
+  <meta charset="UTF-8" />
+  <title>Sunny's Portfolio</title>
 </head>
 <body>
+  <header>
     <h1>Welcome to My Portfolio!</h1>
-    <p>My name is Sunny, and I'm a freshman studying Computer Science. Welcome to my personal website!</p>
-</head>
-<body>
-    <p>This is where my projects and skills will appear soon.</p>
+  </header>
+
+  <p>My name is Sunny, and I'm a freshman studying Computer Science. Welcome to my personal website!</p>
+  <p>This is where my projects and skills will appear soon.</p>
 </body>
 </html>
