--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Sunny's Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <h1>Welcome to My Portfolio!</h1>
   </header>
 
-  <p>My name is Sunny, and I'm a freshman studying Computer Science. Welcome to my personal website!</p>
-  <p>This is where my projects and skills will appear soon.</p>
+  <main>
+    <p>My name is Sunny, and I'm a freshman studying Computer Science. Welcome to my personal website!</p>
+    <p>This is where my projects and skills will appear soon.</p>
+  </main>
 </body>
 </html>
